Oops, fix bugs in dev container setup!
I missed two things:
1) `rake` wasn't available in the path (surprising but ok!), so I replaced it with the more modern and more portable `bin/rails` invocation.
2) Without specifying a `host`, Rails was trying to connect with the database over a socket instead of over a port. Here, we tell it where to actually connect!

I think I'll need to make some tweaks here, since this isn't compatible with my _own_ local setup—maybe I'll revert `database.yml`, and have the dev container use the `DATABASE_URL` environment variable to override it?

But whatever, this is working for now, and that's exciting to me!

Note: On my machine, the install step hangs for a loooong time, to the point where I usually give up. On Codespaces, it also took a while at the same step (`Installing devise-encrpytable`), but eventually got through it. Maybe on my machine it would work if I'm more patient? Idk! But it's good to see it working on something!!

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,7 @@
 development:
   primary:
     adapter: mysql2
+    host: db
     database: openneo_impress
     username: impress_dev
     password: impress_dev
@@ -10,6 +11,7 @@ development:
 
   openneo_id:
     adapter: mysql2
+    host: db
     database: openneo_id
     username: impress_dev
     password: impress_dev
