--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "app",
+  "name": "impress",
+  "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@chakra-ui/icons": "^1.0.4",
@@ -27,11 +28,21 @@
     "tweenjs": "^1.0.2"
   },
   "devDependencies": {
-    "prettier": "^3.0.3"
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "eslint": "^8.52.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets --asset-names=[name]-[hash].digested --loader:.js=jsx --loader:.png=file --loader:.svg=file --loader:.min.js=text",
     "build:dev": "yarn build --public-path=/dev-assets",
-    "dev": "yarn build:dev --watch"
+    "dev": "yarn build:dev --watch",
+    "lint": "eslint app/javascript",
+    "prepare": "husky install"
   }
 }
